tests/toylang/neg/000767_mutation.toylang
program a = { a = 0 while; } .
